--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -76,6 +76,7 @@ size: Dimensione
 delimiter: Delimitatore
 encoding: Codifica
 line_endings: 'Terminatori di linea'
+group: Gruppo
 groups: Gruppi
 others: Altri
 members: Membri
