--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -76,6 +76,7 @@ size: Tamanho
 delimiter: Delimitador
 encoding: Codificação
 line_endings: Finalização
+group: Grupo
 groups: Grupos
 others: Outros
 members: Membros
