--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -76,6 +76,7 @@ size: Storlek
 delimiter: Avgränsare
 encoding: Kodning
 line_endings: Radslut
+group: Grupp
 groups: Grupper
 others: Andra
 members: Medlemmar
