--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -76,6 +76,7 @@ size: Boyut
 delimiter: Sınırlayıcı
 encoding: Kodlama
 line_endings: 'Satır sonları'
+group: Grup
 groups: Gruplar
 others: Diğerleri
 members: Üyeler
